tests/snapshots/bundle_rules@nadri-SequentInMemory.snap
---
source: src/analyses/compute_rules.rs
info:
  bundle_name: nadri
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: true
    inherited_ref_on_ref: EatOuter
    fallback_to_outer: "No"
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: true
    ref_binding_on_inherited: Error
    mut_binding_on_inherited: Keep
---
move ⊢ p0: T0,  move ⊢ p1: T1
----------------------------- "Constructor"
move ⊢ [p0, p1]: [T0, T1]

ref ⊢ p0: T0,  ref ⊢ p1: T1
--------------------------- "ConstructorRef"
move ⊢ [p0, p1]: &[T0, T1]

ref ⊢ p0: T0,  ref ⊢ p1: T1
--------------------------- "ConstructorRef"
ref ⊢ [p0, p1]: [T0, T1]

ref mut ⊢ p0: T0,  ref mut ⊢ p1: T1
----------------------------------- "ConstructorRef"
move ⊢ [p0, p1]: &mut [T0, T1]

ref mut ⊢ p0: T0,  ref mut ⊢ p1: T1
----------------------------------- "ConstructorRef"
ref mut ⊢ [p0, p1]: [T0, T1]

ref ⊢ [p0, p1]: T
-------------------- "ConstructorMultiRef"
move ⊢ [p0, p1]: &&T

ref ⊢ [p0, p1]: T
------------------------ "ConstructorMultiRef"
move ⊢ [p0, p1]: &&mut T

ref ⊢ [p0, p1]: T
------------------ "ConstructorMultiRef"
ref ⊢ [p0, p1]: &T

ref ⊢ [p0, p1]: T
---------------------- "ConstructorMultiRef"
ref ⊢ [p0, p1]: &mut T

ref ⊢ [p0, p1]: T
------------------------ "ConstructorMultiRef"
move ⊢ [p0, p1]: &mut &T

ref mut ⊢ [p0, p1]: T
---------------------------- "ConstructorMultiRef"
move ⊢ [p0, p1]: &mut &mut T

ref ⊢ [p0, p1]: T
---------------------- "ConstructorMultiRef"
ref mut ⊢ [p0, p1]: &T

ref mut ⊢ [p0, p1]: T
-------------------------- "ConstructorMultiRef"
ref mut ⊢ [p0, p1]: &mut T

move ⊢ p: T
------------- "Deref"
move ⊢ &p: &T

move ⊢ p: T
----------- "Deref"
ref ⊢ &p: T

move ⊢ p: T
--------------------- "Deref"
move ⊢ &mut p: &mut T

move ⊢ p: T
------------------- "Deref"
ref mut ⊢ &mut p: T

move ⊢ p: T
----------------- "DerefMutWithShared"
move ⊢ &p: &mut T

move ⊢ p: T
--------------- "DerefMutWithShared"
ref mut ⊢ &p: T

ref ⊢ x: T
--------------- "BindingBorrow"
move ⊢ ref x: T

ref mut ⊢ x: T
------------------- "BindingBorrow"
move ⊢ ref mut x: T


--------- "Binding"
bm ⊢ x: T


------------- "Binding"
bm ⊢ mut x: T
